Feat: 로그인 페이지 및 팝업

--- a/src/assets/css/Home.css
+++ b/src/assets/css/Home.css
@@ -20,9 +20,6 @@
   flex: 1 0 100%; /* 한 슬라이드의 너비를 100%로 설정 */
 }
 
-.left-section {
-}
-
 .left-section h1 {
   margin: 10px 0;
 }
@@ -39,6 +36,7 @@
   width: 120px;
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
   font-weight: bold;
+  z-index: 10;
 }
 
 .start-button:hover {
