--- a/src/assets/css/Header.css
+++ b/src/assets/css/Header.css
@@ -3,7 +3,7 @@
   align-items: center;
   justify-content: space-between;
   padding: 10px 20px;
-  background-color: #ffffff;
+  background-color: #fffcfc;
   height: 60px;
   position: relative;
 }
