--- a/src/assets/css/Login.css
+++ b/src/assets/css/Login.css
@@ -59,3 +59,67 @@
   font-family: "Pretendard-Regular";
   font-weight: bold;
 }
+.login-form-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.login-form {
+  border: 0.5px solid #e3e3e3;
+  background-color: #fff;
+  padding: 40px;
+  border-radius: 8px;
+  text-align: center;
+  width: 320px;
+}
+
+.login-form h2 {
+  margin-bottom: 20px;
+  font-size: 24px;
+  font-weight: bold;
+  color: #333;
+}
+
+.input-container {
+  display: flex;
+  flex-direction: column; /* 세로 방향으로 설정 */
+}
+
+.input-container input {
+  padding: 12px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  font-size: 14px;
+  width: 85%;
+  font-family: "Pretendard-Regular";
+}
+
+.input-button {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+.login-button {
+  background-color: #18cd8c;
+  color: white;
+  padding: 12px;
+  border: none;
+  border-radius: 4px;
+  font-size: 16px;
+  cursor: pointer;
+  width: 30%; /* 버튼의 너비를 100%로 설정 */
+  font-family: "Pretendard-Regular";
+}
+
+.login-button:hover {
+  background-color: #14b57a;
+}
+
+.signup-link {
+  display: block;
+  color: #03c75a;
+  font-size: 16px;
+}
