--- a/src/assets/css/Home.css
+++ b/src/assets/css/Home.css
@@ -1,7 +1,8 @@
-.home-container {
+.homepage-container {
   width: 100%;
   overflow: hidden;
   position: relative;
+  height: 400px;
 }
 
 .slider {
