--- a/src/assets/css/Allof.css
+++ b/src/assets/css/Allof.css
@@ -20,15 +20,16 @@
   height: 60vh;
   display: inline-block;
   margin-bottom: 20px;
+  margin-left: 20px;
 }
 .content {
   display: inline-block;
 }
 
-.Char {
-  margin-left: 40px;
-  margin-top: 50px;
+.allofChar {
   width: 100%;
+  margin-top: 40px;
+  margin-left: 33px;
 }
 
 .content p {
