--- a/src/assets/css/Header.css
+++ b/src/assets/css/Header.css
@@ -42,6 +42,13 @@ li {
   font-weight: bold;
 }
 
+.nav-item:hover {
+  color: #18cd8c;
+}
+.nav-item:hover .dropdown-menu {
+  display: block;
+}
+
 .nav-item a,
 .nav-item span {
   text-decoration: none;
@@ -60,6 +67,54 @@ li {
   align-items: center;
   padding: 20px;
   border-right: 1px solid #ddd;
+  color: #000;
+}
+
+.dropdown-left span {
+  color: #000;
+}
+
+.header-money-box {
+  background-color: #fff;
+  width: 90%;
+  height: 50px;
+  padding: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  border-radius: 10px;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3);
+  overflow: hidden; /* 넘치는 부분 숨기기 */
+}
+
+.header-money {
+  font-size: 2em; /* 숫자 크기 조정 */
+  position: relative;
+}
+
+.number {
+  display: inline-block;
+  animation: roll 1s infinite; /* 애니메이션 적용 */
+}
+
+/* 롤링 애니메이션 정의 */
+@keyframes roll {
+  0% {
+    transform: translateY(0);
+  }
+  25% {
+    transform: translateY(-100%); /* 위로 이동 */
+  }
+  50% {
+    transform: translateY(-200%); /* 또 위로 이동 */
+  }
+  75% {
+    transform: translateY(-300%); /* 계속 위로 이동 */
+  }
+  100% {
+    transform: translateY(0); /* 원래 위치로 돌아오기 */
+  }
 }
 
 .left-image {
@@ -109,16 +164,18 @@ li {
 
 .dropdown-menu {
   display: none;
-  position: absolute;
-  top: 30px;
-  left: -510px;
-  width: 100vw;
+  position: fixed;
+  top: 50px;
+  left: 0;
+  right: 0;
   background-color: #fffcfc;
-  list-style: none;
-  padding: 20px 0;
-  margin: 0;
-  z-index: 1100;
-  height: 45vh;
+  padding: 20px;
+  z-index: 1000;
+  width: 100vw;
+}
+
+.nav-item:hover .dropdown-menu {
+  display: block;
 }
 
 .nav-item.dropdown-active .dropdown-menu {
@@ -131,4 +188,27 @@ li {
 
 .header.visible {
   top: 0;
+}
+
+.allOverLay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 999; /* Make sure it's below the dropdown but above other content */
+}
+
+.num {
+  display: inline-block;
+  width: 20px;
+  overflow: hidden;
+  height: 30px;
+}
+
+.num-list {
+  display: block;
+  line-height: 30px;
+  transition: margin-top 0.3s ease-in-out;
 }
