Feat: 금융소득 절세 전략 페이지

--- a/src/assets/css/Inquiry.css
+++ b/src/assets/css/Inquiry.css
@@ -17,6 +17,11 @@
   margin-bottom: 20px;
 }
 
+.left h1 span {
+  font-size: 40px;
+  color: #18cd8c;
+}
+
 .right-container {
   margin-left: 20px;
   animation: bounce 1s infinite;
