--- a/src/assets/css/Product.css
+++ b/src/assets/css/Product.css
@@ -117,3 +117,162 @@
   margin-top: -40px;
   margin-left: 100px;
 }
+
+.product-details-container {
+  padding: 50px 150px 0px 150px;
+  background-color: #f0f5f9;
+  text-align: left;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-bottom-left-radius: 60px;
+}
+
+h1 {
+  font-size: 28px;
+  color: #333;
+  margin-bottom: 20px;
+}
+
+.rate-box {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.rate-info {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-top: 20px;
+}
+
+.rate-title {
+  font-size: 14px;
+  color: #666;
+}
+
+.rate-value {
+  font-size: 28px;
+  font-weight: bold;
+  color: #000;
+  margin-top: 10px;
+  color: #18cd8c;
+}
+
+.btn-details svg {
+  margin-left: 10px;
+}
+
+.product-description {
+  display: flex;
+  align-items: center;
+  font-size: 16px;
+  color: #666;
+}
+
+.coin-icon {
+  width: 50px;
+  height: 50px;
+  margin-right: 10px;
+}
+
+.divider {
+  height: 65px; /* 선의 높이 조정 */
+  width: 1px; /* 선의 너비 */
+  background-color: #ccc; /* 선의 색상 */
+  margin: 0 20px; /* 양 옆 요소와의 간격 조정 */
+}
+
+.icon-box {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.btn-details {
+  background-color: #18cd8c;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  font-size: 16px;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  margin-bottom: 20px;
+  border-radius: 4px;
+}
+
+.btn-details svg {
+  margin-left: 10px;
+}
+
+.isa-left-container {
+  display: flex;
+  flex-direction: column;
+  margin-left: 120px;
+}
+
+.isa-right-container {
+  margin-left: 20px;
+}
+
+.isa-inquiry-button {
+  background-color: #18cd8c;
+  color: white;
+  padding: 10px 20px;
+  cursor: pointer;
+  border-radius: 11px;
+  font-weight: bold;
+  margin-top: 10px;
+  border: none;
+}
+.investment-points {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.investment-card {
+  background: #fff;
+  border-radius: 3px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  width: 15%;
+  padding: 20px;
+  text-align: center;
+  margin: 0 10px;
+  transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+  font-weight: bold;
+}
+
+.investment-card:hover {
+  transform: scale(1.08); /* Slightly increase the size */
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.15); /* Optionally enhance the shadow */
+}
+
+.investment-icon .invest-icon-svg {
+  width: 80px; /* Adjust size as needed */
+  height: auto;
+  margin-bottom: 15px;
+}
+
+.investment-info h3 {
+  color: #333;
+  font-size: 1.2em;
+}
+
+.investment-info p {
+  color: #aaa;
+  font-size: 0.9em;
+}
+
+.isa-product-container {
+  background-color: #faf9f9;
+  width: 100%;
+  display: grid;
+  margin-top: 150px;
+  height: 80vh;
+}
+
+.isa-product-section {
+  justify-content: center;
+  text-align: center;
+  margin-top: 60px;
+}
