--- a/src/assets/css/Product.css
+++ b/src/assets/css/Product.css
@@ -147,7 +147,7 @@ h1 {
   font-weight: bold;
   color: #000;
   margin-top: 10px;
-  color: #18cd8c;
+  color: #099a96;
 }
 
 .btn-details svg {
@@ -180,7 +180,7 @@ h1 {
 }
 
 .btn-details {
-  background-color: #18cd8c;
+  background-color: #099a96;
   color: #fff;
   border: none;
   padding: 10px 20px;
