--- a/src/assets/css/Product.css
+++ b/src/assets/css/Product.css
@@ -506,3 +506,346 @@ table th:nth-child(2) {
   font-weight: bold;
   font-size: 17px;
 }
+
+.signup-product-container {
+  width: 100%;
+  max-width: 800px;
+  padding: 20px;
+  margin: auto;
+}
+
+.signup-product-container h1 {
+  margin-left: 20px;
+  font-size: 30px;
+}
+
+.progress-steps {
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 20px;
+  margin-right: 40px;
+  font-family: "Pretendard-Regular";
+}
+
+.step {
+  background: none;
+  border: 1px solid #18cd8c;
+  padding: 5px 5px;
+  margin: 0 5px;
+  cursor: pointer;
+  color: #18cd8c;
+  font-size: 15px;
+}
+
+.step:first-child {
+  border-radius: 15px;
+  padding: 5px;
+}
+
+.step:not(:first-child) {
+  border-radius: 200px;
+}
+
+.step.active {
+  background-color: #18cd8c;
+  color: white;
+  font-weight: bold;
+  font-family: "Pretendard-Regular";
+  padding: 8px 10px;
+}
+
+.step2 {
+  background: none;
+  border: 1px solid #099a96;
+  padding: 5px 5px;
+  margin: 0 5px;
+  cursor: pointer;
+  color: #099a96;
+  font-size: 16px;
+}
+
+.step2:nth-child(2) {
+  border-radius: 5px;
+}
+
+.step2:not(:nth-child(2)) {
+  border-radius: 5px;
+}
+
+.step2.active {
+  background-color: #099a96;
+  color: white;
+}
+
+.step3 {
+  background: none;
+  border: 1px solid #099a96;
+  padding: 5px 5px;
+  margin: 0 5px;
+  cursor: pointer;
+  color: #099a96;
+  font-size: 16px;
+}
+
+.step3:nth-child(3) {
+  border-radius: 5px;
+}
+
+.step3:not(:nth-child(3)) {
+  border-radius: 200px;
+}
+
+.step3.active {
+  background-color: #099a96;
+  color: white;
+}
+
+.agreement-product-section {
+  padding: 40px;
+  border-radius: 10px;
+  margin-top: -30px;
+}
+
+.agreement-product-section p {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.agreement-product-container {
+  width: 100%;
+  max-width: 800px;
+  margin: auto;
+  padding: 20px 20px 0px 20px;
+}
+
+.agreement-product-container span {
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.agreement-product-header {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+  background-color: #e3e3e3;
+  padding: 10px;
+}
+
+.agreement-product-header label {
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.agreement-product-list {
+  list-style: none;
+  padding: 0;
+  margin: 0px 40px;
+}
+
+.agreement-product-list li {
+  padding: 10px 0;
+  border-bottom: 1px solid #ddd;
+  cursor: pointer;
+}
+
+.agreement-product-footer {
+  margin-top: 20px;
+  font-size: 14px;
+  color: #555;
+}
+
+.action-buttons {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 20px;
+}
+
+.prev-button {
+  padding: 6px 20px;
+  border: none;
+  border-radius: 19px;
+  cursor: pointer;
+  font-size: 16px;
+  background-color: #d9d9d9;
+  color: #fff;
+  font-family: "Pretendard-Regular";
+  font-weight: bold;
+}
+
+.next-button {
+  background-color: #18cd8c;
+  color: #fff;
+  margin-left: 10px;
+  font-family: "Pretendard-Regular";
+  font-weight: bold;
+  border-radius: 15px;
+  padding: 6px 20px;
+  border: none;
+  border-radius: 19px;
+  cursor: pointer;
+  font-size: 16px;
+  font-family: "Pretendard-Regular";
+  font-weight: bold;
+}
+
+.join-product-notice-box {
+  border: 1px solid #aaaaaa;
+  background-color: #fff;
+  padding: 20px;
+  color: #757575;
+  margin-top: 20px;
+}
+
+.checkbox-box {
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  margin-left: 20px;
+}
+
+.choice-checkbox-box {
+  display: flex;
+  color: #757575;
+}
+
+.checkbox-box label {
+  display: flex;
+  align-items: center;
+}
+
+.join-product-checkbox {
+  color: #757575;
+  padding: 20px;
+}
+
+.join-product-checkbox span {
+  font-size: 17px;
+  color: #099a96;
+}
+
+.join-product-isa-description {
+  border: 1px solid #ccc;
+  background-color: #fff;
+  padding: 20px;
+  color: #757575;
+  margin-top: 50px;
+}
+
+.join-product-sub-heading {
+  border: 1px solid #099a96;
+  color: #099a96;
+  font-weight: bold;
+  background-color: #fff;
+  border-radius: 10px;
+  padding: 8px;
+  text-align: center;
+}
+
+.join-product-sub-heading-box {
+  display: flex;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.join-product-input {
+  width: 70px;
+  height: 30px;
+  border-radius: 3px;
+  margin-right: 10px;
+  border: 1px solid #ccc;
+}
+
+.modal-portfolio {
+  display: flex;
+  padding: 5px 10px;
+  justify-content: space-between;
+}
+
+.modal-portfolio-name {
+  font-weight: bold;
+  color: #757575;
+}
+
+.modal-portfolio-text {
+  font-weight: bold;
+  color: #099a96;
+}
+
+.modal-portfolio-box {
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px;
+  font-size: 15px;
+}
+
+.withdrawal-info {
+  margin-left: 30px;
+}
+.widthdrawal-input-text {
+  display: flex;
+  margin: 0 auto;
+  align-items: center;
+  margin-bottom: 15px;
+}
+
+.join-info-container {
+  display: flex;
+  margin-left: 30px;
+}
+
+.join-info-name-box {
+  display: flex;
+  flex-direction: column;
+}
+
+.join-info-name {
+  color: #757575;
+  font-size: 16px;
+  margin-bottom: 20px;
+}
+
+.join-info-desc {
+  color: #757575;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+.join-info-divider {
+  width: 0.3px;
+  height: 160px;
+  background-color: black;
+  margin: 0 10px;
+}
+
+.join-info-desc-box {
+  display: flex;
+  flex-direction: column;
+}
+
+.join-info-custom-input {
+  border: 1px solid #ccc;
+  padding: 9px;
+  color: #000;
+  font-family: "Pretendard-Regular";
+}
+
+.join-info-custom-input::placeholder {
+  color: #ccc;
+}
+
+.join-product-container h2 {
+  margin-top: 50px;
+}
+
+.contract-desc {
+  color: #898989;
+  margin-bottom: 10px;
+}
+
+.checkbox-text {
+  display: flex;
+  flex-direction: column;
+
+  justify-content: center;
+  align-items: center;
+}
