Feat: 로그인 로그아웃 세션 추가

--- a/src/assets/css/Header.css
+++ b/src/assets/css/Header.css
@@ -228,6 +228,7 @@ li {
 .dropdown-mymenu {
   display: none;
   position: absolute;
+  border-radius: 5px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   background-color: #fffcfc;
   margin-top: 275px;
