--- a/src/assets/css/Allof.css
+++ b/src/assets/css/Allof.css
@@ -4,7 +4,7 @@
 
 .yearend-section h2 {
   font-size: 30px;
-  font-weight: bold;
+  font-family: "Pretendard-Bold";
   margin-bottom: 50px;
   text-align: center;
 }
