--- a/src/assets/css/Loading.css
+++ b/src/assets/css/Loading.css
@@ -84,3 +84,22 @@
   font-family: "Pretandard-Regular";
   font-weight: bold;
 }
+
+/* Loading.css */
+.loading-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7); /* 어두운 배경 */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999; /* 다른 요소 위에 나타나도록 설정 */
+}
+
+.loading-content {
+  text-align: center;
+  color: #fff;
+}
