--- a/src/assets/css/Product.css
+++ b/src/assets/css/Product.css
@@ -408,6 +408,30 @@ h1 {
   font-weight: 100;
 }
 
+.interest-table-container-box {
+  padding: 0px 140px;
+}
+
+.interest-table-container {
+  margin-top: 20px;
+  border-collapse: collapse;
+  width: 100%;
+  background-color: #fff;
+  font-weight: 100;
+}
+
+.interest-table-container th,
+.interest-table-container td {
+  padding: 10px;
+  border: 1.5px solid #dddddd;
+  text-align: center;
+}
+
+.interest-table-container th {
+  background-color: #e8e8e8;
+  text-align: center;
+}
+
 .table-container th,
 .table-container td {
   padding: 10px;
@@ -421,12 +445,12 @@ h1 {
 }
 
 /* ISA 열에 스타일 적용 */
-table tr td:nth-child(2) {
+.table-container tr td:nth-child(2) {
   border: 1px solid #2f9ecd;
   background-color: #eaf5fa;
 }
 
-table th:nth-child(2) {
+.table-container th:nth-child(2) {
   background-color: #2f9ecd;
   color: white;
 }
@@ -462,11 +486,11 @@ table th:nth-child(2) {
 
 .product-info-container .item-content {
   padding: 10px 20px;
-  background: #f0f0f0;
+  background: #f8f8f8;
+  border-top: 1px solid #eee;
   width: 95%;
-  border: 1px solid #ccc;
+
   overflow: hidden;
-  max-height: 0;
   transition: max-height 0.5s ease-in-out;
 }
 
@@ -865,4 +889,32 @@ table th:nth-child(2) {
   padding: 3px;
   width: 55px;
   margin-right: 5px;
+}
+
+.terms-download-box {
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 10px 30px;
+  width: 50%;
+  text-align: left;
+  font-family: "Pretendard-SemiBold";
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+}
+
+.terms-box {
+  display: flex;
+  margin-bottom: 20px;
+}
+
+.deposit-protect-container {
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  color: #757575;
+  padding: 10px 30px;
+  display: flex;
+  align-items: center;
 }
