--- a/src/assets/css/Product.css
+++ b/src/assets/css/Product.css
@@ -1081,3 +1081,273 @@ h1 {
 .invest-info-modal span {
   font-size: 18px;
 }
+
+.span-info {
+  display: flex;
+  align-items: center;
+}
+
+.info-icon {
+  position: relative;
+  display: inline-block;
+}
+
+.info-customer-tooltip {
+  display: none;
+  position: absolute;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  color: #757575;
+  padding: 10px;
+  z-index: 10;
+  width: 400px; /* 필요에 따라 조절 */
+}
+
+.info-icon:hover .info-customer-tooltip {
+  display: block;
+}
+
+.video {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.warning-text p {
+  font-size: 15px;
+  color: #000;
+}
+
+.investment-form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 80px 20px 20px;
+}
+
+.investment-inputs {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  max-width: 700px;
+}
+
+.investment-title {
+  font-size: 20px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+.dropdown {
+  padding: 8px 16px;
+  font-size: 18px;
+  font-family: "Pretendard-Bold";
+  margin: 0 5px;
+  background-color: #fffcfc;
+  border: none;
+  border-bottom: 2px solid #000;
+}
+
+.risk-section,
+.type-section {
+  margin-bottom: 20px;
+  width: 100%;
+}
+
+.section-label {
+  display: flex;
+  align-items: center;
+  font-size: 16px;
+  font-weight: bold;
+  margin-bottom: 10px;
+  text-align: left;
+}
+
+.info-isa {
+  width: 20px;
+  margin-left: 5px;
+}
+
+.risk-options,
+.type-options {
+  display: flex;
+  justify-content: space-between;
+}
+
+.risk-btn,
+.type-btn {
+  flex: 1;
+  padding: 10px;
+  font-size: 16px;
+  border: 1px solid #757575;
+  border-radius: 5px;
+  margin: 0 5px;
+  background-color: #fff;
+  cursor: pointer;
+  font-family: "Pretendard-Regular";
+}
+
+.risk-btn.active,
+.type-btn.active {
+  color: #18cd8c;
+  border: 2px solid #18cd8c;
+  font-family: "Pretendard-Bold";
+}
+
+.submit-btn {
+  padding: 10px 40px;
+  background-color: #18cd8c;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  font-size: 15px;
+  cursor: pointer;
+  font-family: "Pretendard-Bold";
+}
+
+.submit-btn:hover {
+  background-color: #12a871;
+}
+
+.invest-simulation-result-box {
+  background-color: #fff;
+  border: 1px solid #898989;
+  padding: 20px 30px 20px 0px;
+  border-radius: 5px;
+}
+
+.tax-effect-box {
+  height: 170px;
+  background-color: #fff;
+  border: 1px solid #898989;
+  padding: 10px;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+}
+
+.chart-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
+.invest-simulation-modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  right: auto;
+  bottom: auto;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+  border: 1px solid #ccc;
+  background: #fff;
+  overflow: auto;
+  border-radius: 20px;
+  outline: none;
+  padding: 30px;
+  text-align: center;
+  width: 400px;
+  height: 450px;
+}
+
+.invest-simulation-box {
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  max-width: 400px;
+  margin: 0 auto;
+  text-align: left;
+}
+
+.simulation-row {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.label-section {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  justify-content: center;
+}
+
+.label {
+  font-size: 12px;
+  color: #666;
+  text-align: right;
+}
+
+.amount {
+  font-size: 15px;
+  font-weight: bold;
+  color: #333;
+  text-align: right;
+}
+
+.percentage {
+  font-size: 12px;
+  margin-top: 5px;
+  text-align: right;
+}
+
+.bar-section {
+  flex: 1;
+  display: flex;
+  align-items: center;
+}
+
+.bar {
+  width: 100%;
+  height: 10px;
+  border-radius: 5px;
+  margin-left: 10px;
+}
+
+.invest-circle {
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background-color: white;
+  border: 2px solid #007a7d;
+  position: absolute;
+  margin-left: 5px;
+  z-index: 111;
+}
+
+.dashed-line {
+  position: absolute;
+  left: 49%;
+  top: 29%;
+  height: 124px;
+  bottom: 0;
+  border-left: 2px dashed #c3c3c3;
+  z-index: 1; /* Send the dashed line to the back */
+}
+
+.tax-info {
+  text-align: right;
+  color: #666;
+  font-size: 12px;
+  margin-top: 10px;
+}
+
+.modal-confirm-btn {
+  border-radius: 5px;
+  border: none;
+  background-color: #18cd8c;
+  color: #fff;
+  font-family: "Pretendard-Regular";
+}
+
+.instructions {
+  text-align: left;
+}
+
+.instructions p {
+  font-size: 16px;
+  font-family: "Pretendard-Bold";
+}
