--- a/src/assets/css/Header.css
+++ b/src/assets/css/Header.css
@@ -54,7 +54,6 @@ li {
 .nav-item span {
   text-decoration: none;
   font-weight: bold;
-  cursor: pointer;
 }
 
 .dropdown-container {
@@ -66,7 +65,7 @@ li {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 20px;
+  padding: 20px 30px 20px 20px;
   border-right: 1px solid #ddd;
   color: #000;
 }
@@ -170,6 +169,7 @@ li {
 .dropdown-item {
   padding-top: 13px;
   color: #555;
+  cursor: pointer;
 }
 
 .dropdown-menu {
