--- a/src/assets/css/Inquiry.css
+++ b/src/assets/css/Inquiry.css
@@ -76,7 +76,6 @@
 
 .faq-question {
   cursor: pointer;
-  font-weight: bold;
   color: #737880;
   padding: 10px 0;
   font-size: 18px;
@@ -97,4 +96,41 @@
 
 .faq-container h2 {
   font-size: 30px;
+}
+
+.income-sum-input-box {
+  display: flex;
+  margin: 5px auto;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.income-sum-calculate {
+  margin: 10px auto;
+}
+
+.income-sum-input-container {
+  padding: 7px;
+}
+
+.income-sum-input-box label {
+  flex: 1;
+  font-size: 15px;
+}
+
+.income-sum-input-box input {
+  flex: 1;
+  width: 100px;
+}
+
+.income-sum-input-box span {
+  flex: 1;
+  text-align: right;
+}
+
+.income-sum-input {
+  font-size: 14px;
+  border: 1px solid #aaaaaa;
+  border-radius: 5px;
+  height: 23px;
 }
